--- a/Event_Mgnt_System/Event_Mgnt_System/Views/Admin/Login.cshtml
+++ b/Event_Mgnt_System/Event_Mgnt_System/Views/Admin/Login.cshtml
@@ -81,7 +81,7 @@
 
                 <div class="form-group">
                     @*<asp:Button ID="Button1" runat="server" Text="Log In" class="form-control  btn-success" OnClick="Button1_Click" OnClientClick="retrun(passwordmatchfunc())" />*@
-                    <input type="submit" value="Login" class="btn btn-success btn-block" />
+                    <input type="submit" value="Login" class="btn btn-success btn-block" style="background-color:slategrey" />
 
                 </div>
 
