--- a/Event_Mgnt_System/Event_Mgnt_System/Views/User/Index.cshtml
+++ b/Event_Mgnt_System/Event_Mgnt_System/Views/User/Index.cshtml
@@ -107,14 +107,14 @@
     </div>
 
 
+   
 
 
+    <div class="container" style="height: 1150px; margin-top:670px; width:1400px; border:1px solid black; ">
 
-    <div class="container" style="height: 1150px; margin-top: 600px ">
+        <p style="margin-left:580px;margin-top:30px;color:black;font-size:30px;font-family:Algerian"> Book Events </p>
 
-
-
-        <div class="row" style="margin-bottom:40px" id="event">
+        <div class="row" style="margin-bottom:60px" id="event">
             @if (Model != null)
             {
                 foreach (var item in Model)
