--- a/Event_Mgnt_System/Event_Mgnt_System/Views/User/Login.cshtml
+++ b/Event_Mgnt_System/Event_Mgnt_System/Views/User/Login.cshtml
@@ -19,7 +19,7 @@
             }
 
             #main-div {
-                height: 600px;
+                height:400px;
                 // background-image: url('../../Content/img/building6.jpg');
                 background-size: 100% 900px;
           
@@ -34,7 +34,7 @@
                 padding-right: 60px;
                 border-radius: 10px;
                 //background-color: whitesmoke;
-                margin-top: 250px;
+                margin-top:250px;
                 
             }
 
@@ -59,7 +59,7 @@
         @using (@Html.BeginForm())
         {
         <div class="insidebox">
-            <div> <h3>Log In</h3></div>
+            <div> <h3 style=" font-weight:300px; font-family:Bahnschrift">Log In</h3></div>
 
 
             <br />
