--- a/Event_Mgnt_System/Event_Mgnt_System/Views/Admin/ViewEvents.cshtml
+++ b/Event_Mgnt_System/Event_Mgnt_System/Views/Admin/ViewEvents.cshtml
@@ -21,12 +21,12 @@
             <div class="col-lg-12" style="height:100px; ">
 
 
-               
+
             </div>
 
         </div>
 
-
+        <h3 style="margin-left:100px; font-weight:300px; font-family:Bahnschrift; margin-left:400px">All Added Events</h3>
 
         <div class="row" style="margin-bottom:40px">
             @if (Model != null)
@@ -45,7 +45,7 @@
                 }
             }
 
-   </div>
+        </div>
 
 
     </div>
