--- a/Event_Mgnt_System/Event_Mgnt_System/Views/User/Signup.cshtml
+++ b/Event_Mgnt_System/Event_Mgnt_System/Views/User/Signup.cshtml
@@ -12,21 +12,22 @@
 
     #main-div {
         height:500px;
-        background-image: url('../../Content/img/building6.jpg');
+       
      
     }
 
     .insidebox {
         border: 1px solid black;
         margin: 10% auto 10% auto;
-        max-width: 500px;
-        min-width: 200px;
-        padding-left: 60px;
-        padding-right: 60px;
+        width: 600px;
+        
+        padding-left: 120px;
+        
         border-radius: 10px;
-        background-color: whitesmoke;
+       //background-color: whitesmoke;
+        margin-top:180px;
     }
-
+ 
     div h1 {
         text-align: center;
     }
@@ -51,82 +52,94 @@
 
         @using (@Html.BeginForm("Signup", "User", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
+       
+         
+           
+
+
         <div class="insidebox">
-            <div> <h3>Registration</h3></div>
+            <div> <h3 style="margin-left:100px; font-weight:300px; font-family:Bahnschrift">Registration</h3></div>
+            <br>
 
 
 
-            
+
+
             <div class="form-group">
-                <div class="input-group">
+                <div class="input-group" style="width:500px">
+
+
                     <div class="input-group-addon"><span class="glyphicon glyphicon-user"></span></div>
-                    @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
-                    @Html.TextBoxFor(x => x.User_Name, new { @class = "form-control", @placeholder = "User Name" })
+                    @Html.TextBoxFor(x => x.User_Name, new { @class = "form-control", @placeholder = "User Name", style = "Width:200%" })
 
                 </div>
-                <span style="color:red">   @Html.ValidationMessageFor(x => x.User_Name) </span>
+                <span style="color:red">@Html.ValidationMessageFor(x => x.User_Name) </span>
             </div>
 
-            <div class="form-group">
+            <br>
+            <div class="form-group" id="email">
                 <div class="input-group">
                     <div class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></div>
-                    @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
+
                     @Html.TextBoxFor(x => x.Email_ID, new { @class = "form-control", @placeholder = "EmailId" })
 
                 </div>
                 <span style="color:red">   @Html.ValidationMessageFor(x => x.Email_ID) </span>
             </div>
-
+            <br>
             <div class="form-group">
                 <div class="input-group">
                     <div class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></div>
-                    @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
+
                     @Html.TextBoxFor(x => x.Password, new { @class = "form-control", @placeholder = "Password" })
 
                 </div>
                 <span style="color:red">   @Html.ValidationMessageFor(x => x.Password) </span>
             </div>
-
+            <br>
             <div class="form-group">
                 <div class="input-group">
                     <div class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></div>
-                    @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
+
                     @Html.TextBoxFor(x => x.ConfirmPassword, new { @class = "form-control", @placeholder = "Confirm Password" })
 
                 </div>
                 <span style="color:red">   @Html.ValidationMessageFor(x => x.ConfirmPassword) </span>
             </div>
-
+            <br>
             <div class="form-group">
                 <div class="input-group">
                     <div class="input-group-addon"><span class="glyphicon glyphicon-map-marker"></span></div>
-                    @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
+
                     @Html.TextBoxFor(x => x.City, new { @class = "form-control", @placeholder = "City" })
 
                 </div>
                 <span style="color:red">   @Html.ValidationMessageFor(x => x.City) </span>
             </div>
 
+            <br>
 
             <div class="form-group">
                 <div class="input-group">
                     <div class="input-group-addon"><span class="glyphicon glyphicon-earphone"></span></div>
-                    @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
+
                     @Html.TextBoxFor(x => x.ContactNumber, new { @class = "form-control", @placeholder = "Contact Number" })
 
                 </div>
                 <span style="color:red">   @Html.ValidationMessageFor(x => x.ContactNumber) </span>
             </div>
 
+            <br><br>
             <div class="form-group">
 
-                <input type="submit" value="SignUP" class="btn btn-success btn-block" />
+                <input type="submit" value="SignUP" class="btn btn-success btn-block" style="text-align:center; background-color:darkslategrey" />
 
             </div>
 
             <div class="form-group">
                 <p style="color:red">@ViewBag.error</p>
             </div>
+
 
 
 
